[package]
name = "apirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/refere>

[dependencies]
base64="0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
json="0.12.4"
reqwest ={version="0.11.17",features=["json"]}
serde = "1.0.160"
zip = "0.6.4"


[dependencies.rocket]
rocket = "0.5.0-rc.3"
features = ["json"]
